Alignment fixed in home.html

--- a/src/main/webapp/home/home.style.client.css
+++ b/src/main/webapp/home/home.style.client.css
@@ -61,3 +61,8 @@
     margin-top:22px;
 }
 
+.wbdv-align-right {
+    text-align: right;
+}
+
+
